# quantum_test

./: README.md  pyproject.toml  requirements.txt
1_counting_islands/: main.py
1_counting_islands/tests/: tests_islands.py
2_regression_on_the_tabular_data/: README.md  data_preparation.py  eda.ipynb  predict.py  train.py
2_regression_on_the_tabular_data/models/: hgb_model.joblib
3_MNIST_classifier/: main.py
3_MNIST_classifier/digit_classifier/: __init__.py  classifier.py  interface.py  models.py
3_MNIST_classifier/tests/: test_digit_classifier.py
