[project]
name = "quantum-test"
version = "0.1.0"
description = "Test assignment solutions"
readme = "README.md"
requires-python = ">=3.11,<4.0"

dependencies = [
    "numpy>=2.4.6,<3.0.0",
    "pandas>=3.0.3,<4.0.0",
    "scikit-learn>=1.7.0,<2.0.0",
    "joblib>=1.5.0,<2.0.0",
    "matplotlib>=3.10.0,<4.0.0",
    "seaborn>=0.13.0,<1.0.0",
    "jupyter>=1.1.1,<2.0.0",
    "loguru (>=0.7.3,<0.8.0)",
    "shap (==0.51.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

